--- a/less/about.less
+++ b/less/about.less
@@ -14,8 +14,6 @@ body {
         display: flex;
         align-items: center;
 
-
-
         .header-slogan {
 
             .title {
@@ -53,7 +51,7 @@ body {
         .foto {
             width: 530px;
             height: 600px;
-            background: url('../img/about_img1.jpg') no-repeat;
+            background: url('../img/about_img1.jpg') no-repeat center;
             background-position-x: 80%;
             float: left;
             margin-right: 54px;
