--- a/css/adaptive-about.css
+++ b/css/adaptive-about.css
@@ -9,3 +9,189 @@
   display: table;
   clear: both;
 }
+@media (max-width: 1024px) {
+  .container {
+    width: 924px;
+  }
+  .content .container .foto {
+    width: 430px;
+    height: 480px;
+    background-position-x: 85%;
+    margin-right: 34px;
+  }
+  .content .container .our-story > h3 {
+    font-size: 16px;
+    padding: 0;
+  }
+  .content .container .our-story > p {
+    font-size: 14px;
+    line-height: 18px;
+    padding: 5px 0;
+  }
+  .content .container .our-skills > h3 {
+    font-size: 16px;
+    padding: 0;
+  }
+  .content .container .our-skills .graph .graph-title {
+    margin: 13px 0;
+  }
+  .content .container .our-skills .graph .graph-background {
+    width: 450px;
+  }
+  .content .container .team .team-element {
+    width: 290px;
+    height: 500px;
+  }
+  .content .container .team .team-element .team-foto {
+    height: 350px;
+  }
+  .content .container .team .team-element .foto-1 {
+    background-position-y: -10%;
+  }
+  .content .container .team .team-element .foto-2 {
+    background-position-y: -10%;
+  }
+  .content .container .team .team-element .name {
+    padding: 15px 0 0 35px;
+    font-size: 18px;
+  }
+  .content .container .team .team-element .info {
+    padding: 10px 35px 0 35px;
+    line-height: 20px;
+    font-size: 13px;
+  }
+}
+@media (max-width: 768px) {
+  .container {
+    width: 688px;
+  }
+  .site-header .header-element {
+    margin: 0;
+  }
+  .content {
+    margin: 0;
+    padding-top: 25px;
+  }
+  .content .container .foto {
+    width: 380px;
+    height: 400px;
+    margin-bottom: 20px;
+  }
+  .content .container .our-story {
+    padding-bottom: 150px;
+  }
+  .content .container .our-skills {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .content .container .awesome-title {
+    margin-top: 100px;
+  }
+  .content .container .awesome-paragraf {
+    margin-bottom: 80px;
+  }
+  .content .container .team .team-element {
+    width: 200px;
+    height: 520px;
+  }
+  .content .container .team .team-element .team-foto {
+    height: 350px;
+  }
+  .content .container .team .team-element .foto-3 {
+    background-position-x: 50%;
+  }
+  .content .container .team .team-element .name {
+    padding: 15px 0 0 15px;
+  }
+  .content .container .team .team-element .present-post {
+    padding: 5px 0 0 15px;
+  }
+  .content .container .team .team-element .info {
+    padding: 10px 15px 0 15px;
+  }
+}
+@media (max-width: 600px) {
+  .container {
+    width: 320px;
+  }
+  .site-header .header-element {
+    height: 100vh;
+    background-size: cover;
+    background-position-x: 80%;
+    align-content: center;
+  }
+  .site-header .header-element .header-slogan .title {
+    width: 320px;
+    height: 116px;
+    background-color: rgba(0, 0, 0, 0.8);
+  }
+  .site-header .header-element .header-slogan .slogan {
+    font-weight: bold;
+    font-size: 24px;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.8);
+    color: #fff;
+    width: 320px;
+    height: 50px;
+    line-height: 50px;
+  }
+  .content .container .foto {
+    width: 320px;
+    height: 500px;
+    margin-bottom: 20px;
+    background: url('../img/about-img1_1.jpg') no-repeat;
+    background-position-x: 55%;
+  }
+  .content .container .foto:hover {
+    background-position-x: 55%;
+  }
+  .content .container .our-story {
+    padding-bottom: 50px;
+    width: 320px;
+  }
+  .content .container .our-skills {
+    margin: 0 auto;
+    width: 300px;
+  }
+  .content .container .our-skills .graph .graph-background {
+    width: 300px;
+  }
+  .content .container .our-skills .graph .graph-background .graph-filling .indicator {
+    width: 25px;
+    right: -25px;
+  }
+  .content .container .awesome-title {
+    letter-spacing: 5px;
+  }
+  .content .container .awesome-paragraf {
+    width: 320px;
+  }
+  .content .container .team {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .content .container .team .team-element {
+    width: 300px;
+    height: 580px;
+    margin-bottom: 50px;
+  }
+  .content .container .team .team-element .team-foto {
+    height: 400px;
+  }
+  .content .container .team .team-element .foto-3 {
+    background-position-x: 50%;
+  }
+  .content .container .team .team-element .name {
+    padding: 25px 0 0 15px;
+  }
+  .content .container .team .team-element .present-post {
+    padding: 10px 0 0 15px;
+  }
+  .content .container .team .team-element .info {
+    padding: 15px 15px 0 15px;
+  }
+}
