--- a/less/adaptive-about.less
+++ b/less/adaptive-about.less
@@ -1,6 +1,5 @@
 // out: ../css/adaptive-about.css
 
-
 .container {
     position: relative;
     width: 100%;
@@ -90,11 +89,10 @@
                 }
             }
         }
-
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 924px) {
     .container {
         width: 688px;
     }
@@ -102,7 +100,6 @@
     .site-header {
         .header-element {
             margin: 0;
-
         }
     }
 
@@ -127,7 +124,6 @@
                 flex-direction: column;
                 justify-content: center;
                 align-items: center;
-
             }
         }
 
@@ -170,7 +166,7 @@
     }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 688px) {
     .container {
         width: 320px;
     }
@@ -183,24 +179,21 @@
             align-content: center;
 
             .header-slogan {
-
                 .title {
                     width: 320px;
                     height: 116px;
-                    background-color: rgba(0, 0, 0, 0.8);
-
+                    background-color: rgba(0, 0, 0, 0.5);
                 }
 
                 .slogan {
                     font-weight: bold;
                     font-size: 24px;
                     text-align: center;
-                    background-color: rgba(0, 0, 0, 0.8);
+                    background-color: rgba(0, 0, 0, 0.5);
                     color: #fff;
                     width: 320px;
                     height: 50px;
                     line-height: 50px;
-
                 }
             }
         }
@@ -212,7 +205,7 @@
                 width: 320px;
                 height: 500px;
                 margin-bottom: 20px;
-                background: url('../img/about-img1_1.jpg') no-repeat;
+                background: url("../img/about-img1_1.jpg") no-repeat;
                 background-position-x: 55%;
 
                 &:hover {
@@ -241,7 +234,6 @@
                         }
                     }
                 }
-
             }
         }
 
