--- a/less/portfolio.less
+++ b/less/portfolio.less
@@ -89,7 +89,6 @@ body {
             border-left: 1px solid #ebebeb;
             border-right: 1px solid #ebebeb;
             margin: 0;
-            position: relative;
             box-sizing: border-box;
           }
 
@@ -125,6 +124,7 @@ body {
             border-left: 1px solid #ebebeb;
             border-right: 1px solid #ebebeb;
             margin: 0;
+            box-sizing: border-box;
 
             >.fa {
               padding-right: 14px;
